--- a/wp-content/themes/largoproject/less/resources-page.less
+++ b/wp-content/themes/largoproject/less/resources-page.less
@@ -77,7 +77,7 @@ body.normal.page #content.guide-page {
       background-color: @xdkgray;
     }
   }
-  @media screen and (max-width:782px) {
+  @media screen and (max-width: @sideNavCollapse) {
     .guide-nav {
       width: 100%;
       padding: 0;
@@ -133,7 +133,7 @@ body.normal.page #content.guide-page {
     padding-right: 24px;
     box-sizing: border-box;
   }
-  @media screen and (max-width:782px) {
+  @media screen and (max-width: @sideNavCollapse) {
     article.span9 {
       width: 100%;
       margin-left: 0;
